--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3"
+    "body-parser": "^1.20.3",
+    "slugify": "^1.6.6"
   }
 }
