--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_run6",
+  "name": "star-wars-missions",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1691.0",
     "body-parser": "^1.20.3",
-    "slugify": "^1.6.6"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jest": "^29.7.0",
+    "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "slugify": "^1.6.6",
+    "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
